--- a/JsonRequest.Methods/app.config
+++ b/JsonRequest.Methods/app.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="serverMethods" value="http://aidshaman.somee.com/Shaman2/"/>
+    <!--<add key="ServerTest" value="http://aidshaman.somee.com/Shaman"/>-->
+    <add key="ServerTest" value="http://paramedicapps.com.ar:9876/"/>
   </appSettings>
 </configuration>
